--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -38,12 +38,12 @@
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3>{{ cnt_authors }}</h3>
+                            <h3>{{ cnt_publications }}</h3>
 
-                            <p>Authors</p>
+                            <p>Publications</p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-person"></i>
+                            <i class="ion ion-document-text"></i>
                         </div>
                         <a href="#" class="small-box-footer">More info <i
                                 class="fas fa-arrow-circle-right"></i></a>
@@ -54,12 +54,12 @@
                     <!-- small box -->
                     <div class="small-box bg-success">
                         <div class="inner">
-                            <h3>{{ cnt_publications }}</h3>
+                            <h3>{{ cnt_projects }}</h3>
 
-                            <p>Publications</p>
+                            <p>Projects</p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-document-text"></i>
+                            <i class="ion ion-edit"></i>
                         </div>
                         <a href="#" class="small-box-footer">More info <i
                                 class="fas fa-arrow-circle-right"></i></a>
@@ -110,7 +110,7 @@
 
 
                     <!-- BAR CHART -->
-                    <div class="card card-success">
+                    <div class="card card-info">
                         <div class="card-header">
                             <h3 class="card-title">Publications between {{ labels_publications|first }} and {{ labels_publications|last }}</h3>
 
@@ -134,7 +134,7 @@
                     <!-- /.card -->
 
                     <!-- BAR CHART -->
-                    <div class="card card-info">
+                    <div class="card card-success">
                         <div class="card-header">
                             <h3 class="card-title">Projects between {{ labels_projects|first }} and {{ labels_projects|last }}</h3>
 
@@ -178,7 +178,7 @@
                                         <th style="width: 10px">#</th>
                                         <th>Author</th>
                                         <th>Publications</th>
-                                        <th>With Abstract</th>
+                                        <th>With abstract</th>
                                         <th>With full text</th>
                                     </tr>
                                 </thead>
@@ -190,7 +190,9 @@
 
                                             <tr>
                                                 <td>{{ forloop.counter }}</td>
-                                                <td>{{ author.name }}</td>
+                                                <td>
+                                                    <a href="{% url 'author_detail' author.pk %}">{{ author.name }}</a>
+                                                </td>
                                                 <td><span class="badge bg-info">
                                                     {{ author.publications.count }}
                                                 </span></td>
@@ -609,13 +611,13 @@
             datasets: [
                 {
                     label: 'Number of publications',
-                    backgroundColor: 'rgba(92, 184, 92, 0.9)',
-                    borderColor: 'rgba(92, 184, 92, 0.8)',
+                    backgroundColor: 'rgba(91, 192, 222, 0.9)',
+                    borderColor: 'rgba(91, 192, 222, 0.8)',
                     pointRadius: false,
                     pointColor: '#3b8bba',
-                    pointStrokeColor: 'rgba(92, 184, 92, 1)',
+                    pointStrokeColor: 'rgba(91, 192, 222, 1)',
                     pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(92, 184, 92, 1)',
+                    pointHighlightStroke: 'rgba(91, 192, 222, 1)',
 
                     data: {{ data_publications|safe }}
                 },
@@ -648,13 +650,13 @@
             datasets: [
                 {
                     label: 'Number of projects',
-                    backgroundColor: 'rgba(91, 192, 222, 0.9)',
-                    borderColor: 'rgba(91, 192, 222, 0.8)',
+                    backgroundColor: 'rgba(92, 184, 92, 0.9)',
+                    borderColor: 'rgba(92, 184, 92, 0.8)',
                     pointRadius: false,
                     pointColor: '#3b8bba',
-                    pointStrokeColor: 'rgba(91, 192, 222, 1)',
+                    pointStrokeColor: 'rgba(92, 184, 92, 1)',
                     pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(91, 192, 222, 1)',
+                    pointHighlightStroke: 'rgba(92, 184, 92, 1)',
 
                     data: {{ data_projects|safe }}
                 },
