--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -30,7 +30,7 @@
         
         <div class="container-fluid">
 
-            
+            {% comment %}
 
             <!-- Small boxes (Stat box) -->
             <div class="row">
@@ -101,10 +101,13 @@
             </div>
             <!-- /.row -->
 
-
+            {% endcomment %}
 
             <!-- Main row -->
             <div class="row">
+
+                {% comment %}
+
                 <!-- Left col -->
                 <section class="col-lg-7 connectedSortable ui-sortable">
 
@@ -112,7 +115,19 @@
                     <!-- BAR CHART -->
                     <div class="card card-info">
                         <div class="card-header">
-                            <h3 class="card-title">Publications between {{ labels_publications|first }} and {{ labels_publications|last }}</h3>
+                            <h3 class="card-title">
+                                {{ total_data_publications }}
+                                <span class="bold">
+                                {% if publication_type == 'All' %}
+                                    Publications
+                                {% elif publication_type == 'Other' %}
+                                    Other Publications
+                                {% else %}
+                                    {{ publication_type }}s
+                                {% endif %}
+                                </span>
+                                between {{ publication_start }} and {{ publication_end }}
+                            </h3>
 
                             <div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -123,6 +138,7 @@
                                 </button>
                             </div>
                         </div>
+                        
                         <div class="card-body">
                             <div class="chart">
                                 <canvas id="barChart_publications"
@@ -130,13 +146,72 @@
                             </div>
                         </div>
                         <!-- /.card-body -->
+
+                        <div class="card-footer bg-info">
+                            
+                            <div class="btn-group">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                                        Publication type &nbsp
+                                    </button>
+                                    <div class="dropdown-menu">
+
+                                        {% for pub_type in publication_types %}
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input class="
+                                                    {% if pub_type == publication_type %} selected {% endif %}
+                                                " name="publication-type" type="submit" value="{{ pub_type }}">
+                                            </form>
+                                        {% endfor %}
+
+                                    </div>
+                                </div>
+
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                                        Start year &nbsp
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        {% for i in publication_start_range %}
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input class="
+                                                    {% if i == publication_start %} selected {% endif %}
+                                                " name="publication-start" type="submit" value="{{ i }}">
+                                            </form>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-info dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                                        End year &nbsp
+                                    </button>
+                                    <div class="dropdown-menu">
+                                        {% for i in publication_end_range %}
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input class="
+                                                    {% if i == publication_end %} selected {% endif %}
+                                                " name="publication-end" type="submit" value="{{ i }}">
+                                            </form>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+
+                            
+
+                        </div>
+                        <!-- /.card-footer -->
                     </div>
                     <!-- /.card -->
 
                     <!-- BAR CHART -->
                     <div class="card card-success">
                         <div class="card-header">
-                            <h3 class="card-title">Projects between {{ labels_projects|first }} and {{ labels_projects|last }}</h3>
+                            <h3 class="card-title">{{ total_data_projects }} <span class="bold">Projects</span> between {{ project_start }} and {{ project_end }}</h3>
 
                             <div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
@@ -154,6 +229,51 @@
                             </div>
                         </div>
                         <!-- /.card-body -->
+
+                        <div class="card-footer bg-success">
+                            
+                            
+                            <div class="btn-group">
+
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-success dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                                        Start year &nbsp
+                                    </button>
+                                    <div class="dropdown-menu">
+
+                                        {% for i in project_start_range %}
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input class="
+                                                    {% if i == project_start %} selected {% endif %}
+                                                " name="project-start" type="submit" value="{{ i }}">
+                                            </form>
+                                        {% endfor %}
+
+                                    </div>
+                                </div>
+
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-success dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                                        End year &nbsp
+                                    </button>
+                                    <div class="dropdown-menu">
+                                    
+                                        {% for i in project_end_range %}
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input class="
+                                                    {% if i == project_end %} selected {% endif %}
+                                                " name="project-end" type="submit" value="{{ i }}">
+                                            </form>
+                                        {% endfor %}
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <!-- /.card-footer -->
                     </div>
                     <!-- /.card -->
 
@@ -220,15 +340,14 @@
                 </section>
                 <!-- right col -->
 
-
-
+                
 
                 <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
                     Hello <b>{{ user }}</b>!
                     <input type="submit" name="logout" value="Log out" />
                 </form>
-                
+                {% endcomment %}
                 <h1>Add Author</h1>
                 <form method="post">
                     {% csrf_token %}
@@ -236,6 +355,8 @@
                     <input name="add-author" type="submit" value="Submit">
                 </form>
                 
+                
+
                 <h1>All Authors</h1>
                 
                 <form method="post">
@@ -505,12 +626,40 @@
                                             <table class="noborder">
                                                 {% for publication in publications %}
                                                     <tr>
+                                                        <td class="red bold">
+                                                            <p
+                                                                class="inline">
+                                                                {% if publication.from_scopus %}
+                                                                    SC
+                                                                {% endif %}
+                                                            </p>
+                                                        </td>
+                                                        <td class="green bold">
+                                                            <p
+                                                                class="inline">
+                                                                {% if publication.from_ciencia %}
+                                                                    CV
+                                                                {% endif %}
+                                                            </p>
+                                                        </td>
+                                                        <td class="">
+                                                            <p
+                                                                class="inline">
+                                                                {{publication.id}}
+                                                            </p>
+                                                        </td>
+                                                        <td class="">
+                                                            <p
+                                                                class="inline">
+                                                                {{publication.publication_type.name}}
+                                                            </p>
+                                                        </td>
                                                         {% if publication.author_set.all|length != 1 %}
                                                             <td class="">
                                                                 <p
                                                                     title="{% for author in publication.author_set.all %}{{author.name}}     {% endfor %}"
                                                                     class="inline">
-                                                                    {{publication.author_set.all|length}} Authors
+                                                                    ({{publication.author_set.all|length}})
                                                                 </p>
                                                             </td>
                                                         {% else %}
@@ -521,7 +670,7 @@
                                                                 <p
                                                                     title="{% for keyword in publication.keywords.all %}{{keyword.name}}     {% endfor %}"
                                                                     class="inline">
-                                                                    {{publication.keywords.all|length}} Keywords
+                                                                    {{publication.keywords.all|length}} Ky
                                                                 </p>
                                                             </td>
                                                         {% else %}
@@ -532,7 +681,7 @@
                                                                 <p
                                                                     title="{% for area in publication.areas.all %}{{area.name}}     {% endfor %}"
                                                                     class="inline">
-                                                                    {{publication.areas.all|length}} Areas
+                                                                    {{publication.areas.all|length}} Ar
                                                                 </p>
                                                             </td>
                                                         {% else %}
@@ -543,7 +692,7 @@
                                                                 <p
                                                                     title="{{publication.abstract}}"
                                                                     class="inline">
-                                                                    Abstract
+                                                                    Ab
                                                                 </p>
                                                             </td>
                                                         {% else %}
@@ -553,14 +702,18 @@
                                                             <td class="red">
                                                                 <p
                                                                     class="inline">
-                                                                    Full Text
+                                                                    FT
                                                                 </p>
                                                             </td>
                                                         {% else %}
                                                             <td></td>
                                                         {% endif %}
                                                         <td><p class="inline">{{publication.date}}</p></td>
-                                                        <td class="bold"><p>{{publication.title}}</p></td>
+                                                        <td class="bold">
+                                                            <p title="{{publication.scopus_id}}  --  {{publication.ciencia_id}} -- {{publication.doi}}">
+                                                                {{publication.title}}
+                                                            </p>
+                                                        </td>
                                                     </tr>
                                                 {% endfor %}
                                             </table>
@@ -611,13 +764,13 @@
             datasets: [
                 {
                     label: 'Number of publications',
-                    backgroundColor: 'rgba(91, 192, 222, 0.9)',
-                    borderColor: 'rgba(91, 192, 222, 0.8)',
+                    backgroundColor: 'rgba(23, 162, 184, 0.9)',
+                    borderColor: 'rgba(23, 162, 184, 0.8)',
                     pointRadius: false,
                     pointColor: '#3b8bba',
-                    pointStrokeColor: 'rgba(91, 192, 222, 1)',
+                    pointStrokeColor: 'rgba(23, 162, 184, 1)',
                     pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(91, 192, 222, 1)',
+                    pointHighlightStroke: 'rgba(23, 162, 184, 1)',
 
                     data: {{ data_publications|safe }}
                 },
@@ -650,13 +803,13 @@
             datasets: [
                 {
                     label: 'Number of projects',
-                    backgroundColor: 'rgba(92, 184, 92, 0.9)',
-                    borderColor: 'rgba(92, 184, 92, 0.8)',
+                    backgroundColor: 'rgba(40, 167, 69, 0.9)',
+                    borderColor: 'rgba(40, 167, 69, 0.8)',
                     pointRadius: false,
                     pointColor: '#3b8bba',
-                    pointStrokeColor: 'rgba(92, 184, 92, 1)',
+                    pointStrokeColor: 'rgba(40, 167, 69, 1)',
                     pointHighlightFill: '#fff',
-                    pointHighlightStroke: 'rgba(92, 184, 92, 1)',
+                    pointHighlightStroke: 'rgba(40, 167, 69, 1)',
 
                     data: {{ data_projects|safe }}
                 },
