--- a/mkm/knowledge/templates/base.html
+++ b/mkm/knowledge/templates/base.html
@@ -311,6 +311,56 @@
                                     data-accordion="false">
                                     <!-- Add icons to the links using the .nav-icon class
                  with font-awesome or any other icon font library -->
+                                    <li class="nav-item">
+                                        <a href="{% url 'index' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Home
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'test1' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Test 1
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'test2' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Test 2
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'test3' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Test 3
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'test4' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Test 4
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{% url 'test5' %}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>
+                                                Test 5
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-header"></li>
+                                    <li class="nav-header"></li>
                                     <li class="nav-item menu-open">
                                         <a href="#" class="nav-link active">
                                             <i class="nav-icon fas fa-tachometer-alt"></i>
