hide "more info"

--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -59,11 +59,11 @@
                                     </button>
                                 </div>
 
-                                <div class="btn-group">
+                                <!--<div class="btn-group">
                                     <button type="button" class="disabled btn btn-info" onclick="draw()">
                                         Save seed
                                     </button>
-                                </div>
+                                </div>-->
 
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-info dropdown-toggle dropdown-icon" data-toggle="dropdown">
@@ -514,8 +514,8 @@
                         <div class="icon">
                             <i class="ion ion-document-text"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i
-                                class="fas fa-arrow-circle-right"></i></a>
+                        <!--<a href="#" class="small-box-footer">More info <i
+                                class="fas fa-arrow-circle-right"></i></a>-->
                     </div>
                 </div>
                 <!-- ./col -->
@@ -530,8 +530,8 @@
                         <div class="icon">
                             <i class="ion ion-edit"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i
-                                class="fas fa-arrow-circle-right"></i></a>
+                        <!--<a href="#" class="small-box-footer">More info <i
+                                class="fas fa-arrow-circle-right"></i></a>-->
                     </div>
                 </div>
                 <!-- ./col -->
@@ -546,8 +546,8 @@
                         <div class="icon">
                             <i class="ion ion-lightbulb"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i
-                                class="fas fa-arrow-circle-right"></i></a>
+                        <!--<a href="#" class="small-box-footer">More info <i
+                                class="fas fa-arrow-circle-right"></i></a>-->
                     </div>
                 </div>
                 <!-- ./col -->
@@ -562,8 +562,8 @@
                         <div class="icon">
                             <i class="ion ion-university"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i
-                                class="fas fa-arrow-circle-right"></i></a>
+                        <!--<a href="#" class="small-box-footer">More info <i
+                                class="fas fa-arrow-circle-right"></i></a>-->
                     </div>
                 </div>
                 <!-- ./col -->
