--- a/mkm/knowledge/templates/index.html
+++ b/mkm/knowledge/templates/index.html
@@ -628,7 +628,7 @@
                                         {% for pub_type in publication_types %}
                                             <form method="post">
                                                 {% csrf_token %}
-                                                <input class="
+                                                <input class="chartinput
                                                     {% if pub_type == publication_type %} selected {% endif %}
                                                 " name="publication-type" type="submit" value="{{ pub_type }}">
                                             </form>
@@ -645,7 +645,7 @@
                                         {% for i in publication_start_range %}
                                             <form method="post">
                                                 {% csrf_token %}
-                                                <input class="
+                                                <input class="chartinput
                                                     {% if i == publication_start %} selected {% endif %}
                                                 " name="publication-start" type="submit" value="{{ i }}">
                                             </form>
@@ -661,7 +661,7 @@
                                         {% for i in publication_end_range %}
                                             <form method="post">
                                                 {% csrf_token %}
-                                                <input class="
+                                                <input class="chartinput
                                                     {% if i == publication_end %} selected {% endif %}
                                                 " name="publication-end" type="submit" value="{{ i }}">
                                             </form>
@@ -713,7 +713,7 @@
                                         {% for i in project_start_range %}
                                             <form method="post">
                                                 {% csrf_token %}
-                                                <input class="
+                                                <input class="chartinput
                                                     {% if i == project_start %} selected {% endif %}
                                                 " name="project-start" type="submit" value="{{ i }}">
                                             </form>
@@ -731,7 +731,7 @@
                                         {% for i in project_end_range %}
                                             <form method="post">
                                                 {% csrf_token %}
-                                                <input class="
+                                                <input class="chartinput
                                                     {% if i == project_end %} selected {% endif %}
                                                 " name="project-end" type="submit" value="{{ i }}">
                                             </form>
@@ -1508,9 +1508,9 @@
             * Here we will create a few charts using ChartJS
             */
 
-        //-------------
-        //- BAR CHART -
-        //-------------
+        //-------------\\
+        //- BAR CHART -\\ https://www.chartjs.org/docs/2.9.4/
+        //-------------\\
         var areaChartData = {
             labels: {{ labels_publications|safe }},
 
@@ -1538,7 +1538,24 @@
         var barChartOptions = {
             responsive: true,
             maintainAspectRatio: false,
-            datasetFill: false
+            datasetFill: false,
+            legend: {
+                display: false
+            },
+            scales: {
+                xAxes: [{
+                    scaleLabel: {
+                        display: true,
+                        labelString: 'Year'
+                    }
+                }],
+                yAxes: [{
+                    scaleLabel: {
+                        display: true,
+                        labelString: "Number of {% if publication_type == 'All' %}Publications{% elif publication_type == 'Other' %}Other Publications{% else %}{{ publication_type }}s{% endif %}"
+                    }
+                }]
+            }
         }
 
         new Chart(barChartCanvas, {
@@ -1547,9 +1564,9 @@
             options: barChartOptions
         })
 
-        //-------------
-        //- BAR CHART -
-        //-------------
+        //-------------\\
+        //- BAR CHART -\\ https://www.chartjs.org/docs/2.9.4/
+        //-------------\\
         var areaChartData = {
             labels: {{ labels_projects|safe }},
 
@@ -1577,7 +1594,24 @@
         var barChartOptions = {
             responsive: true,
             maintainAspectRatio: false,
-            datasetFill: false
+            datasetFill: false,
+            legend: {
+                display: false
+            },
+            scales: {
+                xAxes: [{
+                    scaleLabel: {
+                        display: true,
+                        labelString: 'Year'
+                    }
+                }],
+                yAxes: [{
+                    scaleLabel: {
+                        display: true,
+                        labelString: "Number of projects"
+                    }
+                }]
+            }
         }
 
         new Chart(barChartCanvas, {
